# Dasher

./: .gitignore  CMakeLists.txt  ChangeLog.txt  Dasher.sln  Phase.sln  Phase.vcxproj  README.md
Assets/Shaders/: vertex.shader
CMake_Mac/: CMakeLists.txt
CMake_Win/: CMakeLists.txt
Dasher/: Dasher.vcxproj  Dasher.vcxproj.filters
Dasher/Assets/Shaders/: vertex.shader
Dasher/src/: AllShapes.h  Constants.h  Log.cpp  Log.h  Maths.cpp  Maths.h  Timer.cpp  Timer.h  main.cpp
Dasher/src/Application/: Application.cpp  Application.h  EventCallbacks.cpp  EventCallbacks.h
Dasher/src/AssetManagement/: Font.cpp  Font.h  StandardTexture.cpp  StandardTexture.h  Texture.cpp  Texture.h
Dasher/src/BlockSpawnerFunc/: DefaultSpawnerFunc.cpp  TutorialSpawnerFunc.h
Dasher/src/Collision/: Collision.cpp  Collision.h
Dasher/src/Core/: CircularQueue.cpp  CircularQueue.h
Dasher/src/Events/: BackgroundLayer.cpp  BackgroundLayer.h  BlockSpawnerLayer.cpp  BlockSpawnerLayer.h  CreditLayer.cpp  CreditLayer.h  FadeoutScreenLayer.h  Layer.h  PlayerLayer.cpp  PlayerLayer.h  UILayer.cpp  UILayer.h
Dasher/src/Events/MainMenu/: MainMenuLayer.cpp  MainMenuLayer.h
Dasher/src/Events/Player/: AbstractPlayerLayer.cpp  AbstractPlayerLayer.h  NormalPlayerLayer.cpp  NormalPlayerLayer.h  ZenPlayerLayer.cpp  ZenPlayerLayer.h
Dasher/src/Events/Tutorial/: TutorialBlockSpawnerLayer.cpp  TutorialBlockSpawnerLayer.h  TutorialCustomBlockSpawner.cpp  TutorialCustomBlockSpawner.h  TutorialPlayerLayer.cpp  TutorialPlayerLayer.h
Dasher/src/Renderer/: GlBuffer.cpp  GlBuffer.h  Renderer.cpp  Renderer.h  RendererShapes.cpp  RendererShapes.h  RendererUtils.h  RendererVertex.cpp  RendererVertex.h  Texture.cpp  Texture.h
Dasher/src/Renderer/Shapes/: BaseShape.cpp  BaseShape.h  QuadShape.cpp  QuadShape.h
Dasher/src/UI/: Button.cpp  Button.h  PushButton.cpp  PushButton.h  UIObject.cpp  UIObject.h
Phase/Assets/Icon/: Phase.icns
Phase/Assets/Shaders/: vertex.shader
Phase/src/: CommandLineFeatures.cpp  CommandLineFeatures.h  Constants.cpp  Constants.h  Log.cpp  Log.h  Maths.h  main.cpp
Phase/src/Application/: Application.cpp  Application.h  EventCallbacks.cpp
Phase/src/AssetManagement/: Font.cpp  Font.h  Texture.cpp  Texture.h
Phase/src/BlockSpawnerFunc/: DefaultSpawnerFunc.cpp  TutorialSpawnerFunc.cpp
Phase/src/Collision/: Collision.cpp  Collision.h
Phase/src/Core/: CircularQueue.cpp  CircularQueue.h  StringHelper.cpp
Phase/src/Events/: BackgroundLayer.h  BlockSpawnerLayer.cpp  BlockSpawnerLayer.h  CreditLayer.cpp  FadeoutScreenLayer.cpp  FadeoutScreenLayer.h  UILayer.cpp  UILayer.h
Phase/src/Events/MainMenu/: MainMenuLayer.cpp
Phase/src/Events/Player/: AbstractPlayerLayer.cpp  AbstractPlayerLayer.h  NormalPlayerLayer.cpp  NormalPlayerLayer.h  NormalPlayerLayerUI.cpp  NormalPlayerLayerUI.h  ZenPlayerLayer.cpp  ZenPlayerLayer.h
Phase/src/Events/Tutorial/: TutorialBlockSpawnerLayer.cpp  TutorialBlockSpawnerLayer.h  TutorialPlayerLayer.cpp  TutorialPlayerLayer.h
Phase/src/Renderer/: Renderer.cpp  RendererShapes.h  RendererUtils.h
Phase/src/UI/: Button.cpp  PushButton.h  UIObject.h
src/Application/: Application.cpp
src/AssetManagement/: StandardTexture.cpp  StandardTexture.h
src/BlockSpawnerFunc/: DefaultSpawnerFunc.h
src/Core/: StringHelper.h
src/Events/: BackgroundLayer.cpp  BackgroundLayer.h  BlockSpawnerLayer.h  CreditLayer.cpp  CreditLayer.h  FadeoutScreenLayer.cpp
src/Events/MainMenu/: MainMenuLayer.h
src/Events/Player/: NormalPlayerLayer.cpp  NormalPlayerLayerUI.h
src/Events/Tutorial/: TutorialPlayerLayer.cpp  TutorialPlayerLayer.h
src/Renderer/: Renderer.cpp  RendererShapes.cpp  RendererShapes.h  RendererUtils.h
src/UI/: Button.h  PushButton.h  UIImage.cpp  UIImage.h  UIObject.cpp
